Fix the TextInput component text alignment (#55)
* fix the text input text alignment

--- a/src/components/TextInput/style.scss
+++ b/src/components/TextInput/style.scss
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     margin: $element-margin;
     min-height: 24px;
+    height: 24px;
     background-color: $bcg-dark;
     vertical-align: top;
     transition: color 100ms, background-color 100ms, box-shadow 100ms;
