--- a/src/components/TextAreaInput/style.scss
+++ b/src/components/TextAreaInput/style.scss
@@ -1,5 +1,6 @@
 .pcui-text-area-input {
     min-height: 48px;
+    height: auto;
 
     > textarea {
         resize: none;
